--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <h1>Hello me</h1>
+    <h1>Hello</h1>
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
